[gd_scene load_steps=2 format=3 uid="uid://bdpd4vlv7wtfm"]

[ext_resource type="Script" path="res://script/resource_downloader.gd" id="1_6gijx"]

[node name="ResourceDownloader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6gijx")

[node name="HTTPDownloadGRPCURL" type="HTTPRequest" parent="."]
download_file = "user://grpcurl.tar.gz"
timeout = 10.0

[node name="HTTPDownloadEnforcer" type="HTTPRequest" parent="."]
download_file = "user://300301enforcer.zip"
timeout = 10.0

[node name="HTTPDownloadBitcoin" type="HTTPRequest" parent="."]
download_file = "user://bitcoinpatched.zip"
timeout = 120.0

[node name="HTTPDownloadThunder" type="HTTPRequest" parent="."]
download_file = "user://thunder.zip"
timeout = 120.0

[connection signal="request_completed" from="HTTPDownloadGRPCURL" to="." method="_on_http_download_grpcurl_request_completed"]
[connection signal="request_completed" from="HTTPDownloadEnforcer" to="." method="_on_http_download_enforcer_request_completed"]
[connection signal="request_completed" from="HTTPDownloadBitcoin" to="." method="_on_http_download_bitcoin_request_completed"]
[connection signal="request_completed" from="HTTPDownloadThunder" to="." method="_on_http_download_thunder_request_completed"]
